--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ faker = "^18.3.1"
 sentence-transformers = "^2.2.2"
 pinecone-client = "^2.2.1"
 python-dotenv = "^1.0.0"
+gapminder = "^0.1"
 
 [build-system]
 requires = ["poetry-core"]
